updated at 2016年 2月 7日 日曜日 18時30分42秒 JST

--- a/stylesheets/frontend/application.css
+++ b/stylesheets/frontend/application.css
@@ -7,7 +7,7 @@ body {
 
 pre, code {
   padding: 0;
-  margin: 0;
+  margin: 0 0 8px 0;
   font-size: 95%;
   font-family: "Lato",'Helvetica Neue',Helvetica,sans-serif; }
 
@@ -19,6 +19,10 @@ a:hover {
 
 main {
   margin-bottom: 48px; }
+
+p {
+  padding: 0;
+  margin: 0; }
 
 /* ==============================
             Page Header
